--- a/assets/css.css
+++ b/assets/css.css
@@ -1,8 +1,38 @@
+/* The order of css styling reflects the order of how it is displayed in the app window */
+
 body{
     /* background-color: black; */
+    /* color: black !important; */
+};
+
+.divTextColor {
+    color: #f0f0f0 !important;
 }
 
+#headerdiv {
+    margin: 5px;
+}
+
+    #locationdiv {
+        font-size: smaller;
+        width: 200px;
+    }
+
 #traindiv {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.platformContainerDiv {
+    display: flex;
+    flex-direction: column; 
+    width: 100%;
+}
+
+.platformDiv {
+    margin: 10px;
+    font-size: smaller;
 }
 
 .parentdiv{
@@ -12,51 +42,78 @@ body{
     transition: 0.5s;
 }
 
-.destinationdiv {
-    position: absolute;
-    left: 10px;
-    top: 16px;
-    font-size: large;
-    width: calc(100vw - 80px);
-    overflow: auto;
-    text-align: left;
-}
+    .destinationdiv {
+        position: absolute;
+        left: 10px;
+        top: 16px;
+        font-size: large;
+        width: calc(100vw - 80px);
+        overflow: auto;
+        text-align: left;
+    }
 
-.nexttimediv {
-    position: absolute;
-    right: 10px;
-    top: 5px;
-    font-size: x-large;
-    display: inline-block;
-}
+    .nexttimediv {
+        position: absolute;
+        right: 10px;
+        top: 5px;
+        font-size: x-large;
+        display: inline-block;
+    }
 
-.othertimediv {
-    position: absolute;
-    right: 10px;
-    top: 37px;
-    font-size: x-small;
-}
+        .smallMin {
+            font-size: x-small;
+            display: inline;
+        }
 
-.expanddiv {
-    display: none;
-    position: absolute;
-    top: 60px;
-    width: calc(100vw - 80px);
-    overflow: auto;
-    text-align: left;
-    font-size: small;
-    transition: 0.5s;
-}
+    .othertimediv {
+        position: absolute;
+        right: 10px;
+        top: 37px;
+        font-size: x-small;
+    }
 
-.icondiv {
-    display: none;
-    position: absolute;
-    top: 60px;
-    right: 5px;
-    text-align: left;
-    font-size: small;
-    transition: 0.5s;
-}
+    .expanddiv {
+        display: none;
+        position: absolute;
+        top: 60px;
+        width: calc(100vw - 80px);
+        overflow: auto;
+        text-align: left;
+        font-size: small;
+        transition: 0.5s;
+    }
+
+    .icondiv {
+        display: none;
+        position: absolute;
+        top: 60px;
+        right: 5px;
+        text-align: left;
+        font-size: small;
+        transition: 0.5s;
+    }
+        
+        .nobike {
+            position: absolute;
+        }
+
+        .nobikeban {
+            position: absolute;
+            right: 5px;
+            top: 3px;
+            zoom: 2.5;
+            color: red;
+            z-index: 1;
+        }
+
+        .nobikebike {
+            position: absolute;
+            right: 11px;
+            top: 7px;
+            zoom: 1.5;
+        }
+
+/* Style for clicking, functions */
 
     .expanded{
         height: 120px;
@@ -67,41 +124,6 @@ body{
         transition-delay: 0.5s;
     }
 
-    .nobike {
-        position: absolute;
-    }
-
-    .nobikeban {
-        position: absolute;
-        right: 5px;
-        top: 3px;
-        zoom: 2.5;
-        color: red;
-        z-index: 1;
-    }
-
-    .nobikebike {
-        position: absolute;
-        right: 11px;
-        top: 7px;
-        zoom: 1.5;
-    }
-
-
-    .platformDiv {
-        margin: 10px;
-        font-size: smaller;
-    }
-
-    .smallMin {
-        font-size: x-small;
-        display: inline;
-    }
-
-    #locationdiv {
-        font-size: smaller;
-        width: 200px;
-    }
 /*     
     .test{
     color: #be5111
