--- a/assets/css.css
+++ b/assets/css.css
@@ -135,3 +135,61 @@ body{
     .test{
     color: #be5111
 } */
+
+
+/* Switch taken and modified from W3Schools */
+/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch */
+
+
+.switch {
+    position: absolute;
+    display: inline-block;
+    width: 80px;
+    height: 28px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #cccccc;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 5px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #1C9F14;
+  }
+  
+  
+  input:checked + .slider:before {
+    transform: translateX(50px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 28px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
