--- a/assets/css.css
+++ b/assets/css.css
@@ -15,7 +15,7 @@ body{
 }
 
     #locationdiv {
-        font-size: smaller;
+        font-size: small;
         width: 200px;
     }
 
@@ -23,7 +23,16 @@ body{
         position: absolute;
         right: 10px;
         top: 8px;
+        transition: all .2s linear 0s;
     }
+
+        #refreshIcon:hover {
+            cursor: pointer;
+        }
+
+        #refreshIcon:active {
+            transform: translateY(6px) rotate(180deg);
+        }
 
 #traindiv {
     display: flex;
@@ -39,21 +48,21 @@ body{
 
 .platformDiv {
     margin: 10px;
-    font-size: smaller;
+    font-size: small;
 }
 
 .parentdiv{
     width: calc(100% - 16px);
     position: relative;
-    height: 60px;
+    height: 66px;
     transition: 0.5s;
 }
 
     .destinationdiv {
         position: absolute;
-        left: 10px;
-        top: 16px;
-        font-size: large;
+        left: 16px;
+        top: 11px;
+        font-size: x-large;
         width: calc(100vw - 80px);
         overflow: auto;
         text-align: left;
@@ -61,32 +70,33 @@ body{
 
     .nexttimediv {
         position: absolute;
-        right: 10px;
-        top: 5px;
+        right: 16px;
+        top: 6px;
         font-size: x-large;
         display: inline-block;
     }
 
         .smallMin {
-            font-size: x-small;
+            font-size: small;
             display: inline;
         }
 
     .othertimediv {
         position: absolute;
-        right: 10px;
-        top: 37px;
-        font-size: x-small;
+        right: 16px;
+        top: 36px;
+        font-size: small;
     }
 
     .expanddiv {
         display: none;
         position: absolute;
         top: 60px;
+        left: 16px;
         width: calc(100vw - 80px);
         overflow: auto;
         text-align: left;
-        font-size: small;
+        font-size: medium;
         transition: 0.5s;
     }
 
@@ -94,9 +104,9 @@ body{
         display: none;
         position: absolute;
         top: 60px;
-        right: 5px;
+        right: 15px;
         text-align: left;
-        font-size: small;
+        font-size: medium;
         transition: 0.5s;
     }
         
@@ -106,7 +116,7 @@ body{
 
         .nobikeban {
             position: absolute;
-            right: 5px;
+            right: 15px;
             top: 3px;
             zoom: 2.5;
             color: red;
@@ -115,7 +125,7 @@ body{
 
         .nobikebike {
             position: absolute;
-            right: 11px;
+            right: 21px;
             top: 7px;
             zoom: 1.5;
         }
